src/App.css
#light{
    background-color: lightskyblue;
  }
  
  #dark{
    background-color: black;
  }

  #light .bg-color{
    background-color: lightyellow;
  }

  #dark .bg-color{
    background-color: khaki;
  }

  .border-rad{
    border-radius: 30px;
  }

  .box-width{
    width: 550px;
  }

  .css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root {
    font-weight: bold !important;
}

.css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root.Mui-focused {
  color: black !important;
}

.css-1jy569b-MuiFormLabel-root-MuiInputLabel-root {
    font-weight: bold !important;
}

.css-1jy569b-MuiFormLabel-root-MuiInputLabel-root.Mui-focused{
    color: black !important;
}

.css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input {
    font-weight: bold !important;
}

.playnow-button{
    font-weight: bold !important;
    background-color: lightcyan !important;
    color: black !important;
}

.result-detailsbox-width{
  width: 270px;
}

.endscreen-container{
  width: 100%;
}

.questions-section{
  width: 400px;
  margin-left: 20px !important;
}

.option-button{
  background-color: gray !important;
}

.toast-message{
  width: 25vw;
  background-color: black !important;
}

@media screen and (min-width:200px) and (max-width:600px) {
  .result-detailsbox-width{
      width: 200px;
  }
  .endscreen-container{
      width: auto !important;
  }
  .padding{
    padding-top: 0px !important;
  }

  .toast-message{
    width: auto;
  }

  .w-auto{
    width: auto;
  }
}

  @media screen and (max-width:600px) {
    .box-width{
        width: 350px;
      }
      .questions-section{
        width: 250px;
        margin-left: 0px !important;
    }
    .toast-message{
      width: auto;
    }
  }

